kube-cluster/yamls/sbapi/sbapi-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sbapi
  template:
    metadata:
      labels:
        app: sbapi
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: mysql
        image: javascriptjenkins/sbapi:latest
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: applogs-persistent-storage
          mountPath: /logs
      volumes:
      - name: applogs-persistent-storage
        persistentVolumeClaim:
          claimName: applogs-pv-claim
