kube-cluster/yamls/sbapi/sbapi-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbapi-np
spec:
  type: NodePort
  ports:
  - port: 8080
    name: tcp-8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sbapi
