kube-cluster/yamls/sbapi/sbapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbapi
spec:
  ports:
  - port: 8080
    name: tcp-8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sbapi
