kube-cluster/yamls/sbapi/sbapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysbapiingress
spec:
  rules:
  - host: sportvvs.com
    http:
      paths:
      - backend:
          serviceName: sbapi-service
          servicePort: 80
        path: /
